# BLJ2024_TR_Tho-Abi-Jar-Qui

./: CMakeLists.txt  Geometrie.c  Geometrie.h  Pflichtfeatures.c  Pflichtfeatures.h  Subtrahieren.c  Subtrahieren.h  Wurzeln.c  choice.c  dividieren.c  dividieren.h  exponent.c  exponenten.c  fakulität.c  fakulität.h  fakultät.c  main.c  multiplizeren.c  multiplizeren.h  root.c  summieren.c  summieren.h
Calculator/: chaincalculator.c  choice.c  exponenten.c  exponenten.h  fakulitat.c
Calculator/Documentation/01_inform/: Inform.md
Calculator/Documentation/02_plan/: planning.md
Calculator/Documentation/03_decide/: decision.md
Calculator/Documentation/04_realize/: Realize.md
Calculator/Documentation/06_assess/: Assess.md
Taschenrechner/: CMakeLists.txt  chaincalculator.c  chaincalculator.h  choice.c  choice.h  dividieren.c  dividieren.h  exponenten.c  exponenten.h  fakulitat.c  fakulitat.h  geometrie.c  geometrie.h  lifescience.c  lifescience.h  linearfunctions.c  linearfunctions.h  main.c  multiplizeren.c  multiplizeren.h  rockpaperscissor.c  rockpaperscissor.h  subtrahieren.c  summieren.c  summieren.h  wurzeln.c  wurzeln.h
Taschenrechner/Documentation/01_inform/: ## Inform.md  Inform.md
Taschenrechner/Documentation/02_plan/: planning  planning.md
Taschenrechner/Documentation/03_decide/: decide  decision.md
Taschenrechner/Documentation/04_realize/: Realize.md
Taschenrechner/Documentation/05_control/: Control.md
Taschenrechner/Documentation/06_assess/: Assess.md
